--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,8 @@ width: 100%;
 background-color: #434343;
 }
 
-#about-link { float: left; }
+#about-link { float: left;
+}
 
 #connect {
 float: right;
@@ -146,11 +147,24 @@ padding: 0;
 }
 
 #connect li { 
-display: inline-block; 
-margin: 0 10px 0 0;
+display: inline-block;
+color: #fde7e8; 
+}
+
+#connect a {
+margin: 0px 5px 0px 0px;
+vertical-align: sub;	
 }
 
 #connect li:last-child { margin-right: 0; }
+
+#connect span{
+display: none;	
+}
+
+#facebook {background-image:url('/beautiful-news/images/sprite.png'); width: 20px; height: 20px; background-position: 66px 0px;}
+#twitter {background-image:url('/beautiful-news/images/sprite.png'); width: 20px; height: 20px; background-position: 44px 0px;}
+#rss {background-image:url('/beautiful-news/images/sprite.png'); width: 20px; height: 20px; background-position: 20px 0px;}
 
 #top-bar { 
 font-family: 'helvetica', 'arial'; 
@@ -161,7 +175,9 @@ color: #fff;
 #top-bar a,
 #top-bar a:visited,
 footer a,
-footer a:visited { color: #fff;}
+footer a:visited { color: #fde7e8;
+text-decoration: none;
+}
 
 #top-bar a:hover,
 footer a:hover { text-decoration: none; }
