--- a/templates/default_site/embeds.group/header.html
+++ b/templates/default_site/embeds.group/header.html
@@ -3,10 +3,10 @@
 		<h4 id="about-link"><a href="{path='about'}"><span>About Us</span></a></h4>
 
 		<ul id="connect" class="clearfix">
-			<li>Connect:</li>
-			<li><a href=""><span>Facebook</span></a></li>
-			<li><a href=""><span>Twitter</span></a></li>
-			<li><a href=""><span>RSS</span></a></li>
+			<li><h4>Connect:</h4></li>
+			<a href=""><li id="facebook"><span>Facebook</span></li></a>
+			<a href=""><li id="twitter" ><span>Twitter</span></li></a>
+			<a href=""><li id="rss"><span>RSS</span></li></a>
 		</ul>
 	</div>
 </div><!-- top-bar -->
