--- a/css/styles.css
+++ b/css/styles.css
@@ -542,7 +542,7 @@ background-color:#434343;
 footer { padding: 1em 0; }
 
 footer h4 {
-color: #fff;
+color: #fde7e8;
 font-weight: normal;
 font-size: 0.875em;
 margin: 0;
