--- a/css/styles.css
+++ b/css/styles.css
@@ -244,8 +244,11 @@ padding: 0.75em 0;
 
 nav li { 
 display: inline-block; 
-margin: 0 3% 0 0;
+margin: 0 2.5% 0 0;
+vertical-align: middle;
 }
+
+nav li:last-child { margin-right: 0; }
 
 #stories {background-image:url('/beautiful-news/images/sprite.png'); width: 40px; height: 26px; background-position: 0px 0px;}
 #share {background-image:url('/beautiful-news/images/sprite.png'); width: 40px; height: 26px; background-position: 200px 0px;}
@@ -270,10 +273,10 @@ border-radius: 3px;
 -moz-border-radius: 3px;
 }
 
-
 #searchbar input:focus {
 background: #fff;
 }
+
 
 #filter { 
 padding: 2.5em 0;
@@ -286,6 +289,7 @@ color: #434343;
 font-size: 1.25em;
 text-decoration: none;
 text-transform: uppercase;
+vertical-align: middle;
 }
 
 #filter-icon {background-image:url('/beautiful-news/images/sprite.png'); width: 43px; height: 26px; background-position: 128px 0px;}
