Added site index link to "latest" button

--- a/templates/default_site/embeds.group/header.html
+++ b/templates/default_site/embeds.group/header.html
@@ -57,7 +57,7 @@
         {/exp:channel:categories}
     </select>
 </form></li>
-	<li id="filter-latest"><a href="">Latest</a></li>
+	<li id="filter-latest"><a href="{path='site_index'}">Latest</a></li>
 </ul><!--filter-->	
 
 </header>
