--- a/css/styles.css
+++ b/css/styles.css
@@ -290,6 +290,7 @@ font-size: 1.25em;
 text-decoration: none;
 text-transform: uppercase;
 vertical-align: middle;
+position:relative;
 }
 
 #filter-icon {background-image:url('/beautiful-news/images/sprite.png'); width: 43px; height: 26px; background-position: 128px 0px;}
@@ -302,6 +303,22 @@ padding: 3px 10px 2px 10px;
 #filter-subject a {
 text-decoration: none;
 color: #fff; 	
+}
+
+.arrow {
+background-image:url('/beautiful-news/images/sprite.png');
+width: 20px; 
+height: 20px; 
+background-position: 86px 0px; 
+display: block; 
+float: right;
+border: none;
+}
+
+#filter-dropdown li {
+list-style-type: none;
+display: inline-block;
+float: left	
 }
 
 #filter-latest {
