--- a/css/styles.css
+++ b/css/styles.css
@@ -297,12 +297,16 @@ position:relative;
 
 #filter-subject {
 background-color: #434343;
-padding: 3px 10px 2px 10px; 	
+padding: 3px 10px 2px 10px; 
 }
 
 #filter-subject a {
 text-decoration: none;
 color: #fff; 	
+}
+
+#filter-subject a {
+cursor: pointer;	
 }
 
 .arrow {
