--- a/templates/default_site/embeds.group/header.html
+++ b/templates/default_site/embeds.group/header.html
@@ -52,7 +52,7 @@
 	
 	<!-- ==================== -->
 	
-	<li id="filter-subject" class="show"><a>Subject<span class="arrow"></span></a></li>
+	<li id="filter-subject"><a>Subject<span class="arrow"></span></a></li>
 	
 	<!-- ==================== -->
 	
