Removed hidden category toggle…too many sliders on the same page!

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,9 +12,9 @@ body { margin: 0; font-size: 1em; line-height: 1.4; }
 ::-moz-selection { background: #fe57a1; color: #fff; text-shadow: none; }
 ::selection { background: #fe57a1; color: #fff; text-shadow: none; }
 
-a { color: #00e; }
-a:visited { color: #551a8b; }
-a:hover { color: #06e; }
+a { color: #fff; }
+a:visited { color: #fff; }
+a:hover { color: #e1e1e1; }
 a:focus { outline: thin dotted; }
 
 a:hover, a:active { outline: 0; }
@@ -464,18 +464,22 @@ padding-left: 20px;
 
 /* ==|== Share Story ======================================================== */
 
+#select-category li {
+list-style-type: none;
+display: inline-block;
+float: left	
+}
+
 #subject-select {
+cursor: pointer;
 background-color: #434343;
-padding: 3px 10px 2px 10px; 	
-}
-
-
-a#subject-select {
+padding: 5px 10px; 
+border: none; 
+color: #ffffff;	
 text-transform: uppercase;
-color: #fff; 
-text-decoration: none;
-font-weight: normal;
 }
+
+/* ================== */
 
 #share-background {
 	width: 100%;
@@ -486,15 +490,15 @@ font-weight: normal;
 
 #share-background h1 {
 text-transform: uppercase;
-font-weight: normal;	
+font-weight: normal;
+font-size: 1.5em;	
 }
 
-#more-details{
-border: 1px solid white;	
-}
+/* ================== */
 
 form {
 overflow: hidden;
+position: relative;
 }
 
 form label {
@@ -531,15 +535,6 @@ top: -9999px !important;
 left: -9999px !important;	
 }
 
-form button {
-background-color: #434343;
-padding: 5px 10px; 
-border: none; 
-color: #ffffff;	
-text-transform: uppercase;
-}
-
-
 form fieldset input:focus,
 form fieldset textarea:focus {
 background: #fff;
@@ -550,15 +545,24 @@ background: #fff;
 width: 900px;	
 }
 
-#select-category li {
-list-style-type: none;
-display: inline-block;
-float: left	
+#more-details {
+border: 1px solid white;	
 }
 
-#subject-select {
-cursor: pointer;	
+/* ================== */
+
+#submit {
+background-color: #434343;
+padding: 5px 10px; 
+border: none; 
+color: #ffffff;	
+text-transform: uppercase;
+font-size: 1.5em;
 }
+
+
+
+
 
    
 
