--- a/templates/default_site/share.group/index.html
+++ b/templates/default_site/share.group/index.html
@@ -7,11 +7,6 @@
 
 <h1>I want to share my Beautiful News of <a id="subject-select">Select</a></h1>
 
-<ul id="select-category">
-	{exp:channel:categories channel="story" style="linear"}
-	<li class="tag"><a href="{path='channel/index'}">{category_name}</a></li>
-	{/exp:channel:categories}
-</ul>
 
 <form id="share-form" action="">
 
@@ -35,13 +30,16 @@
 		<input class="checkbox" id="disclaimer" type="checkbox"/>
 	</fieldset>
 	
-	<fieldset>
-		<button type="submit">Submit</button>
-	</fieldset>
-
 </form><!--share-form-->
 
-<h3 id="add-more-details"><a>Add more details</a></h3>
+
+
+
+<button id="submit">Submit</button>
+		
+<h1 id="add-more-details"><a>Add more details</a></h1>
+
+
 
 <form id="more-details" action="">
 
@@ -93,14 +91,6 @@ $(document).ready(function () {
 		$('#more-details').hide();
 		$('#add-more-details').click(function () {
 		$('#more-details').slideToggle(500);
-    });
-});
-
-
-$(document).ready(function () {
-		$('#select-category').hide();
-		$('#subject-select').click(function () {
-		$('#select-category').slideToggle(500);
     });
 });
 
